--- a/package.json
+++ b/package.json
@@ -1,50 +1,27 @@
 {
-  "name": "taskmaster-pro-dashboard",
-  "private": true,
-  "version": "1.0.0",
-  "description": "Advanced project management dashboard for rental and sales management systems",
-  "keywords": ["dashboard", "react", "typescript", "tailwind", "charts", "analytics"],
-  "author": "Development Team",
-  "license": "MIT",
-  "type": "module",
-  "homepage": "https://github.com/your-org/taskmaster-pro-dashboard",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/your-org/taskmaster-pro-dashboard.git"
-  },
-  "bugs": {
-    "url": "https://github.com/your-org/taskmaster-pro-dashboard/issues"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "echo \"No tests specified\" && exit 0",
-    "type-check": "tsc --noEmit",
-    "analyze": "npm run build && npx vite-bundle-analyzer dist"
-  },
-  "dependencies": {
-    "date-fns": "^2.30.0",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "recharts": "^3.1.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
-  }
+    "name": "taskmaster-pro-laravel",
+    "private": true,
+    "version": "1.0.0",
+    "description": "Advanced project management dashboard built with Laravel and Tailwind CSS",
+    "keywords": ["laravel", "dashboard", "tailwind", "charts", "analytics"],
+    "scripts": {
+        "build": "vite build",
+        "dev": "vite",
+        "watch": "vite build --watch",
+        "hot": "vite --host"
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/typography": "^0.5.0",
+        "autoprefixer": "^10.4.12",
+        "axios": "^1.1.2",
+        "laravel-vite-plugin": "^0.7.2",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.2.1",
+        "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "chart.js": "^4.4.0",
+        "lucide": "^0.294.0"
+    }
 }
