--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-    "name": "taskmaster-pro-laravel",
-    "private": true,
-    "version": "1.0.0",
-    "description": "Advanced project management dashboard built with Laravel and Tailwind CSS",
-    "keywords": ["laravel", "dashboard", "tailwind", "charts", "analytics"],
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite",
-        "watch": "vite build --watch",
-        "hot": "vite --host"
-    },
-    "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/typography": "^0.5.0",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.2.1",
-        "vite": "^4.0.0"
-    },
-    "dependencies": {
-        "chart.js": "^4.4.0",
-        "lucide": "^0.294.0"
-    }
+  "name": "taskmaster-pro-dashboard",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "description": "Advanced project management dashboard built with React and Tailwind CSS",
+  "keywords": ["react", "dashboard", "tailwind", "charts", "analytics", "typescript"],
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.8.0",
+    "lucide-react": "^0.294.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
+  }
 }
