--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "version": "1.0.0",
   "type": "module",
   "description": "Advanced project management dashboard built with React and Tailwind CSS",
-  "keywords": ["react", "dashboard", "tailwind", "charts", "analytics", "typescript"],
+  "keywords": [
+    "react",
+    "dashboard",
+    "tailwind",
+    "charts",
+    "analytics",
+    "typescript"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,10 +19,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.8.0",
-    "lucide-react": "^0.294.0"
+    "react-router-dom": "^7.9.5",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
